# claude-buddy-pico

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  NOTICE  README.md
3D Print Case/: README.md  Sample display base.stl
3D Print Case/reference/: MEASUREMENTS.md
3D Print Case/scripts/: buddy_case.py  build.sh  render.py  review_render.py
Physical Build/: BUILD_GUIDE.md  INDEX.md
Physical Build/CAD/: Claude_Pico_Battery_Clip.step  Claude_Pico_Battery_Clip.stl  Claude_Pico_Case_Main_Body.step  Claude_Pico_Case_Main_Body.stl  Claude_Pico_Case_Rear_With_Tail.step  Claude_Pico_Case_Rear_With_Tail.stl  Claude_Pico_Left_Side_Button.step  Claude_Pico_Left_Side_Button.stl  Claude_Pico_Power_Button.step  Claude_Pico_Power_Button.stl  Claude_Pico_Right_Side_Button.step  Claude_Pico_Right_Side_Button.stl
docs/: advanced-firmware-capability-review.md  bring-up-journal.md  feature-matrix.md  folder-push.md  hardware-build.md  limitations.md  new-firmware-ui-plan.md  project-plan.md  protocol-map.md  software-setup.md  user-guide.md  v2-ui-integration.md
examples/character-packs/sunset_blob/: README.md  manifest.json
scripts/: bootstrap_macos.sh  clone_deps.sh  configure_firmware.sh  extract_local_toolchain.sh  fork_upstream.sh  publish_to_github.sh  reconcile_with_fork.sh
smoke-tests/: README.md
src/: btstack_config.h  buddy.cpp  buddy.h  buddy_common.h  claude_buddy_ble_smoke.cpp  claude_buddy_ble_smoke.gatt  claude_buddy_pico.cpp  claude_buddy_pico.gatt  smoke_test.cpp  ui_v2_smoke.cpp
src/_legacy/: README.md  app_state.hpp  battery.cpp  battery.hpp  ble_nus.cpp  ble_nus.hpp  main.cpp  protocol.cpp  protocol.hpp  settings.cpp  settings.hpp  ui.cpp  ui.hpp
src/ui_v2/: README.md  acting.h  chrome.cpp  chrome.h  companion.cpp  companion.h  expression.cpp  expression.h  eye.cpp  eye.h  face.cpp  face.h  geometry.h  gfx.cpp  gfx.h  palette.h  permissions_log.cpp  permissions_log.h  risk_tier.cpp  risk_tier.h  transitions.cpp  transitions.h  ui_core.cpp  ui_core.h  ui_state.h
src/ui_v2/screens/: approval.cpp  approval.h  boot.cpp  boot.h  buddy_mode.cpp  buddy_mode.h  character_picker.cpp  character_picker.h  demo.cpp  demo.h  dock_clock.cpp  dock_clock.h  home.cpp  home.h  info.cpp  info.h  permissions.cpp  permissions.h  pet.cpp  pet.h  reset.cpp  reset.h  screen.h  settings.cpp  settings.h  stats.cpp  stats.h  sync.cpp  sync.h  system_menu.cpp  system_menu.h  transfer.cpp  transfer.h  usage.cpp  usage.h  vtable_registry.cpp
toolchains/: README.md
